# rules_typescript_grpc_example

./: BUILD.bazel  README.md  WORKSPACE  package.json
accounts/: BUILD.bazel  main.go
accounts/client/: BUILD.bazel  app.ts  http_server.bzl  index.html  rollup.config.js
accounts/proto/: BUILD.bazel
