load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ecosia/hackdays-ecosia-account/accounts",
    visibility = ["//visibility:private"],
    deps = [
        "//accounts/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "accounts",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
