load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load(":http_server.bzl", "http_server")

ts_library(
    name = "app",
    srcs = ["app.ts"],
    node_modules = "@js_deps//:node_modules",
    deps = [
      "//accounts/proto:proto_ts_proto",
    ]
)

ts_devserver(
    name = "devserver",
    # We'll collect all the devmode JS sources from these TypeScript libraries
    deps = [":app"],
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = ["index.html"],
    port = 8081,
)

rollup_bundle(
    name = "bundle",
    globals = {"this": "window"},
    # srcs = [
    #     "app.ts",
    # ],
    entry_point = "accounts/client/app",
    node_modules = "@js_deps//:node_modules",
    deps = [":app"],
    rollup_config_entry_point = "js_deps/node_modules/rollup/bin/rollup",
    rollup_config_node_modules = "@js_deps//:node_modules",
    rollup_config_tmpl = "rollup.config.js",
)

http_server(
  name = "prodserver",
  args = ["./accounts/client", "-p", "8081"],
  data = [
    "index.html",
    ":bundle.js",
  ]
)
