load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_proto_library")
load("@ts_protoc_gen//:defs.bzl", "typescript_proto_library")


proto_library(
    name = "proto_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/ecosia/hackdays-ecosia-account/accounts/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/ecosia/hackdays-ecosia-account/accounts/proto",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
  name = "proto_ts_proto",
  proto = ":proto_proto",
  visibility = ["//visibility:public"],
)

ts_proto_library(
  name = "proto_tsts_proto",
  deps = [":proto_proto"],
  visibility = ["//visibility:public"],
)

